--- a/custom_quot_report_ftmc/views/sale_order_views.xml
+++ b/custom_quot_report_ftmc/views/sale_order_views.xml
@@ -22,6 +22,20 @@
                             </form>
                         </field>
                     </page>
+                    <page string="Technical Description" name="technical_description">
+                        <field name="brand_make_ids">
+                            <tree>
+                                <field name="brand_id"/>
+                                <field name="technical_ids" widget="many2many_tags"/>
+                            </tree>
+                            <form>
+                                <group>
+                                    <field name="brand_id"/>
+                                    <field name="technical_ids" widget="many2many_tags"/>
+                                </group>
+                            </form>
+                        </field>
+                    </page>
                 </notebook>
                 <group name="sale_reporting" position="inside">
                     <field name="inquiry_date"/>
@@ -31,9 +45,6 @@
                 <field name="partner_id" position="after">
                     <field name="contact_ids" widget="many2many_tags"/>
                 </field>
-<!--                <xpath expr="//group//field[@name='opportunity_id']" position="attributes">-->
-<!--                    <attribute name="string">Opportunity / Project</attribute>-->
-<!--                </xpath>-->
             </field>
         </record>
         <record id="view_order_form_inherit_quotation_report_crm" model="ir.ui.view">
