--- a/custom_sale_project/wizard/sale_order_discount_wizard_view.xml
+++ b/custom_sale_project/wizard/sale_order_discount_wizard_view.xml
@@ -10,22 +10,29 @@
                     <div class="oe_title">
                         <h1>Apply Discount by Product Category</h1>
                     </div>
+
+                    <!-- Hidden field for available categories -->
+                    <field name="available_category_ids" invisible="1"/>
                     <group>
                         <group>
                             <field name="sale_order_id" readonly="1"/>
-                            <field name="product_category_id" options="{'no_create': True}"/>
+                             <field name="product_category_id"
+                                   options="{'no_create': True, 'no_create_edit': True}"
+                                   domain="[('id', 'in', available_category_ids)]"
+                                   placeholder="Select a category from BOM lines..."/>
                         </group>
                         <group>
                             <field name="discount_amount" />
                             <field name="affected_bom_lines_count" readonly="1"/>
                         </group>
                     </group>
+
                     <group string="BOM Lines to be Updated">
                         <field name="current_bom_info" readonly="1" nolabel="1" widget="text"/>
                     </group>
                 </sheet>
                 <footer>
-                    <button name="action_apply_discount" string="Apply Discount" type="object" class="btn-primary"/>
+                    <button name="action_apply_discount" string="Apply Discount" type="object" class="btn-primary" invisible="affected_bom_lines_count == 0"/>
                     <button name="action_cancel" string="Cancel" type="object" class="btn-secondary"/>
                 </footer>
             </form>
