--- a/custom_sale_project/views/sale_order_view.xml
+++ b/custom_sale_project/views/sale_order_view.xml
@@ -5,7 +5,12 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
 
+
+
+
             <xpath expr="//field[@name='order_line']//tree/field[@name='product_template_id']" position="after">
+
+
                 <field name="task_count" string="Boms"/>
 
                 <button name="action_view_tasks" type="object"
@@ -18,9 +23,15 @@
                 <button name="%(action_sale_line_margin_wizard)d"
                         type="action"
                         icon="fa-percent"
-                        title="Apply Margin to Boms"
+                        string="Apply Margin"
                         context="{'default_sale_line_id': id}"
                         invisible="task_count == 0"/>
+                  <button name="%(action_sale_line_discount_wizard)d"
+                        string="Apply Discount"
+                        type="action"
+                        class="btn-secondary"
+                        icon="fa-minus-circle"
+                        help="Apply discount percentage to all related tasks"/>
             </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button name="action_view_project"
