--- a/custom_sale_project/views/mrp_bom_view.xml
+++ b/custom_sale_project/views/mrp_bom_view.xml
@@ -9,6 +9,11 @@
             <!--                <attribute name="widget">section_and_note_one2many</attribute>-->
             <!--                <attribute name="mode">tree</attribute> &lt;!&ndash; if you also want a specific mode &ndash;&gt;-->
             <!--            </xpath>-->
+            <xpath expr="//div[@name='button_box']" position="inside">
+                <button name="action_view_sale_order" type="object" string="View Sale Order"
+                        class="oe_stat_button"
+                        invisible="not sale_order_id"/>
+            </xpath>
             <xpath expr="//field[@name='bom_line_ids']/tree//field[@name='product_id']" position="attributes">
 
 
