--- a/custom_sale_project/views/account_move_view.xml
+++ b/custom_sale_project/views/account_move_view.xml
@@ -5,8 +5,11 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <field name="tax_ids" position="after">
-                                <field name="discount_amount" readonly="1"/>
+                <field name="discount_amount" readonly="1"/>
             </field>
+            <xpath expr="//field[@name='invoice_date']" position="after">
+                <field name="picking_id" options="{'no_create': True}"/>
+            </xpath>
         </field>
 
 
