--- a/custom_sale_project/views/mrp_bom_view.xml
+++ b/custom_sale_project/views/mrp_bom_view.xml
@@ -87,7 +87,9 @@
             <xpath expr="//field[@name='code']" position="after">
 
 
+                <field name="task_id" invisible="1"/>
                 <field name="sale_order_id" invisible="1"/>
+                <field name="sale_order_line_id" invisible="1"/>
                 <field name="sale_order_from_task_id" invisible="1"/>
 
             </xpath>
